# ProtProfileMD

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: input.fasta  input_aa.fasta
scripts/: model_benchmarks.py  model_inference.py  model_training.py  train_inf_bench_pipeline.py
src/protprofilemd/: __init__.py
src/protprofilemd/analysis/: entropy.py  sequence.py
src/protprofilemd/data/: fasta.py  profile_csvs.py  profile_generation.py  segmentation.py  train_processing.py  utils.py
src/protprofilemd/model/: data_collator_training_args.py  inference.py  model_manager.py  protein_encoder.py  protein_tokenizer.py  protprofilemd.py  protprofilemd_heads.py  utils.py
src/protprofilemd/plots/: __init__.py  benchmarks.py  density_plots.py  entropy_decomposition.py  hamming.py  heatmaps.py  scatterplots.py  training_history.py
src/protprofilemd/utils/: definitions.py  helpers.py  logging.py
src/protprofilemdanalysis/scripts-benchmarks/: runFoldseek_3Di_vs_PDB.sh  runFoldseek_PDB_vs_PDB.sh  runFoldseek_Profile_vs_3Di.sh  runFoldseek_Profile_vs_PDB.sh
src/protprofilemdanalysis/scripts-data/: argmax_profiles.py  build_profiledb.py  generate_foldseek_db.py  subtract_background.py
src/protprofilemdrust/: Cargo.toml
src/protprofilemdrust/src/: fasta.rs  lib.rs  pdb.rs  strings.rs
